--- a/build.gradle
+++ b/build.gradle
@@ -2,20 +2,16 @@ buildscript {
     repositories {
         mavenCentral()
     }
-    dependencies {
-        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.2'
-    }
 }
 
 repositories {
     mavenCentral()
 }
 
-ext.junitPlatformVersion = '1.0.2'
-ext.junitJupiterVersion = '5.0.2'
+ext.junitPlatformVersion = '1.2.0'
+ext.junitJupiterVersion = '5.2.0'
 
 apply plugin: 'java'
-apply plugin: 'org.junit.platform.gradle.plugin'
 
 jar {
     baseName = 'duly-noted'
@@ -25,26 +21,12 @@ jar {
 compileTestJava {
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
-    options.compilerArgs += '-parameters'
 }
 
-junitPlatform {
-    // platformVersion '1.0.2'
-    filters {
-        engines {
-            // include 'junit-jupiter', 'junit-vintage'
-            // exclude 'custom-engine'
-        }
-        tags {
-            // include 'fast'
-            exclude 'slow'
-        }
-        // includeClassNamePattern '.*Test'
+test {
+    useJUnitPlatform {
+        systemProperty 'java.util.logging.manager', 'java.util.logging.LogManager'
     }
-    // configurationParameter 'junit.jupiter.conditions.deactivate', '*'
-    // enableStandardTestTask true
-    // reportsDir file('build/test-results/junit-platform') // this is the default
-    logManager 'java.util.logging.LogManager'
 }
 
 dependencies {
@@ -58,5 +40,5 @@ dependencies {
 
 task wrapper(type: Wrapper) {
     description = 'Generates gradlew[.bat] scripts'
-    gradleVersion = '4.4'
+    gradleVersion = '4.7'
 }
