--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 buildscript {
     repositories {
         mavenCentral()
+        jcenter()
+    }
+    dependencies {
+        classpath 'ru.vyarus:gradle-animalsniffer-plugin:1.5.0'
     }
 }
 
@@ -12,6 +16,7 @@ ext.junitPlatformVersion = '1.4.2'
 ext.junitJupiterVersion = '5.4.2'
 
 apply plugin: 'java'
+apply plugin: 'ru.vyarus.animalsniffer'
 
 jar {
     baseName = 'duly-noted'
