--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,10 @@ ext.junitJupiterVersion = '5.6.2'
 apply plugin: 'java'
 apply plugin: 'ru.vyarus.animalsniffer'
 
+archivesBaseName = 'duly-noted'
+
 jar {
-  baseName = 'duly-noted'
-  version = '0.1-SNAPSHOT'
+   version = '0.1-SNAPSHOT'
 }
 
 compileTestJava {
@@ -35,7 +36,7 @@ test {
 }
 
 dependencies {
-  testCompile("org.hamcrest:java-hamcrest:2.0.0.0")
+  testCompile("org.hamcrest:hamcrest:2.2")
   testCompile("org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}")
   testRuntime("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")
 
