--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,8 @@ dependencies {
   testCompile("org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}")
   testRuntime("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")
   testCompile("io.leangen.geantyref:geantyref:1.3.11")
+  testCompile("org.springframework:spring-core:5.3.2")
 
   // To avoid compiler warnings about @API annotations in JUnit code
-  testCompileOnly('org.apiguardian:apiguardian-api:1.1.0')
+  testCompileOnly('org.apiguardian:apiguardian-api:1.1.1')
 }
