--- a/build.gradle
+++ b/build.gradle
@@ -1,47 +1,39 @@
-buildscript {
-  repositories {
-    mavenCentral()
-    jcenter()
-  }
-  dependencies {
-    classpath 'ru.vyarus:gradle-animalsniffer-plugin:1.5.1'
-  }
+plugins {
+  id 'java'
+  id('ru.vyarus.animalsniffer') version '1.7.1'
 }
 
 repositories {
   mavenCentral()
+  jcenter()
 }
 
-ext.junitPlatformVersion = '1.6.2'
-ext.junitJupiterVersion = '5.6.2'
+dependencies {
+  testImplementation(platform('org.junit:junit-bom:5.10.1'))
+  testImplementation('org.junit.jupiter:junit-jupiter')
 
-apply plugin: 'java'
-apply plugin: 'ru.vyarus.animalsniffer'
+  testImplementation('org.hamcrest:hamcrest:2.2')
+  testImplementation('io.leangen.geantyref:geantyref:1.3.14')
+  testImplementation('org.springframework:spring-core:6.0.6')
+
+  // To avoid compiler warnings about @API annotations in JUnit code
+  testCompileOnly('org.apiguardian:apiguardian-api:1.1.2')
+}
 
 archivesBaseName = 'duly-noted'
 
 jar {
-   version = '0.1-SNAPSHOT'
+  version = '0.1-SNAPSHOT'
 }
 
 compileTestJava {
-  sourceCompatibility = 11
-  targetCompatibility = 11
+  sourceCompatibility = 17
+  targetCompatibility = 17
 }
 
 test {
-  useJUnitPlatform {
-    systemProperty 'java.util.logging.manager', 'java.util.logging.LogManager'
+  useJUnitPlatform()
+  testLogging {
+    events 'passed', 'skipped', 'failed'
   }
-}
-
-dependencies {
-  testCompile("org.hamcrest:hamcrest:2.2")
-  testCompile("org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}")
-  testRuntime("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")
-  testCompile("io.leangen.geantyref:geantyref:1.3.11")
-  testCompile("org.springframework:spring-core:5.3.3")
-
-  // To avoid compiler warnings about @API annotations in JUnit code
-  testCompileOnly('org.apiguardian:apiguardian-api:1.1.1')
 }
