--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,6 @@ plugins {
 
 repositories {
   mavenCentral()
-  jcenter()
 }
 
 dependencies {
@@ -18,6 +17,8 @@ dependencies {
 
   // To avoid compiler warnings about @API annotations in JUnit code
   testCompileOnly('org.apiguardian:apiguardian-api:1.1.2')
+
+  signature 'org.codehaus.mojo.signature:java17:1.0@signature'
 }
 
 archivesBaseName = 'duly-noted'
@@ -26,9 +27,9 @@ jar {
   version = '0.1-SNAPSHOT'
 }
 
-compileTestJava {
-  sourceCompatibility = 17
-  targetCompatibility = 17
+java {
+  sourceCompatibility = JavaVersion.VERSION_17
+  targetCompatibility = JavaVersion.VERSION_17
 }
 
 test {
