--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
   id 'java'
-  id('ru.vyarus.animalsniffer') version '1.7.1'
 }
 
 repositories {
@@ -9,7 +8,8 @@ repositories {
 
 dependencies {
   testImplementation(platform('org.junit:junit-bom:5.10.1'))
-  testImplementation('org.junit.jupiter:junit-jupiter')
+  testImplementation('org.junit.jupiter:junit-jupiter:5.10.1')
+  testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 
   testImplementation('org.hamcrest:hamcrest:2.2')
   testImplementation('io.leangen.geantyref:geantyref:1.3.14')
@@ -17,11 +17,11 @@ dependencies {
 
   // To avoid compiler warnings about @API annotations in JUnit code
   testCompileOnly('org.apiguardian:apiguardian-api:1.1.2')
-
-  signature 'org.codehaus.mojo.signature:java17:1.0@signature'
 }
 
-archivesBaseName = 'duly-noted'
+base {
+  archivesName = 'duly-noted'
+}
 
 jar {
   version = '0.1-SNAPSHOT'
@@ -30,6 +30,9 @@ jar {
 java {
   sourceCompatibility = JavaVersion.VERSION_17
   targetCompatibility = JavaVersion.VERSION_17
+}
+compileJava {
+  options.release = 17
 }
 
 test {
