--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,8 @@ java {
   sourceCompatibility = JavaVersion.VERSION_17
   targetCompatibility = JavaVersion.VERSION_17
 }
-compileJava {
+
+tasks.withType(JavaCompile).configureEach {
   options.release = 17
 }
 
