--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,13 @@ repositories {
 }
 
 dependencies {
-  testImplementation(platform('org.junit:junit-bom:5.10.1'))
-  testImplementation('org.junit.jupiter:junit-jupiter:5.10.1')
+  testImplementation(platform('org.junit:junit-bom:5.13.4'))
+  testImplementation('org.junit.jupiter:junit-jupiter:5.13.4')
   testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 
-  testImplementation('org.hamcrest:hamcrest:2.2')
-  testImplementation('io.leangen.geantyref:geantyref:1.3.14')
-  testImplementation('org.springframework:spring-core:6.0.6')
+  testImplementation('org.assertj:assertj-core:3.27.3')
+  testImplementation('io.leangen.geantyref:geantyref:2.0.1')
+  testImplementation('org.springframework:spring-core:6.2.9')
 
   // To avoid compiler warnings about @API annotations in JUnit code
   testCompileOnly('org.apiguardian:apiguardian-api:1.1.2')
